# rtrie

./: .gitignore  README.md  playground.py  pyproject.toml
benchmarks/: main.py  time.py
benchmarks/results/: hash_map_1.csv  hash_set_1.csv  naive_trie_1.csv  results-10.json  results-100.json  results-1000.json  results-10000.json  results-100000.json  results-1000000.json  sorted_dict_1.csv  sorted_set_1.csv  space-blah.json  space-both.json  space-interning.json  space-slots.json  trie_1.csv
examples/: 1.tsv  10.tsv  100.tsv  wikidata-50.tsv
results/: hash_map_1.csv  hash_set_1.csv  naive_trie_1.csv  sorted_dict_1.csv  sorted_set_1.csv  trie_1.csv
rtrie/: __init__.py
src/rtrie/: __init__.py  __main__.py  array_trie.py  naive_trie.py  node.py  stored_trie.py  string_trie.py  trie.py
tests/: test_stats.py  test_string_trie.py  test_trie.py
